test/parsetest/valid/IdentifierLBracketRBracketInLocalVariableDeclStatement.java
class IdentifierLBracketRBracketInLocalVariableDeclStatement {
    public int[] abc(){
        SomeClass[] abc = 43;
    }
}
