test/parsetest/invalid/missing_public.java
/* Missing public */
class Clazz {
    int a = 0;
}